k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random 
  labels:
    app: random
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  
    spec:
      containers:
      - image: docker.io/vietcgi/random:latest 
        imagePullPolicy: Always
        name: random
        ports:
        - containerPort: 5000
          protocol: TCP
