k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: random
spec:
  selector:
    app: random
  ports:
    - port: 80
      targetPort: 5000 
  type: ClusterIP
